--- a/TnTComponents/Styles/Components/_card.scss
+++ b/TnTComponents/Styles/Components/_card.scss
@@ -1,5 +1,5 @@
 ﻿.tnt-card {
-    margin: 8px;
+    //margin: 8px;
     padding: 16px;
     color: $tnt-color-on-surface;
     @include tnt-border-radius(3);
