--- a/LiveTest/LiveTest.Client/Pages/SegmentedButton.razor
+++ b/LiveTest/LiveTest.Client/Pages/SegmentedButton.razor
@@ -3,6 +3,10 @@
 @using TnTComponents.Common
 @using TnTComponents.Enum
 
+<TnTButton Title="Button">
+    Button
+</TnTButton>
+
 <TnTRow>
     <TnTColumn>
         <TnTSegmentedButton>
