--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -15,10 +15,9 @@
     <HeadOutlet />
 </head>
 
-<body theme="default">
+<body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/TnTComponents/scripts/TnTComponents.js"></script>
 </body>
 
 </html>
