--- a/TnTComponents/TnTButton.razor
+++ b/TnTComponents/TnTButton.razor
@@ -19,4 +19,5 @@
         @TnTIconComponent.RenderIcon(IconType, EndIcon, "tnt-button-end-icon")
     }
 </button>
-@RenderScript()
+<TnTPageScript Src="./_content/TnTComponents/TnTButton.razor.js?tntbutton" />
+
