--- a/TnTComponents/Forms/TnTRadioButton.razor
+++ b/TnTComponents/Forms/TnTRadioButton.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TInputType
+﻿@*@typeparam TInputType
 @inherits TnTBaseComponent
 
 <div class="@GetCssClass()">
@@ -16,3 +16,4 @@
 </div>
 
 
+*@
