--- a/TnTComponents/Forms/TnTRadioGroup.razor
+++ b/TnTComponents/Forms/TnTRadioGroup.razor
@@ -1,4 +1,4 @@
-﻿@typeparam TInputType
+﻿@*@typeparam TInputType
 @inherits TnTInputField<TInputType>
 
 
@@ -16,3 +16,4 @@
 @if (ShowValidation) {
     <ValidationMessage class="@GetValidationMessageCssClass()" theme="@Theme" For="ValueExpression" />
 }
+*@
