--- a/TnTComponents/Styles/Components/_form.scss
+++ b/TnTComponents/Styles/Components/_form.scss
@@ -1,12 +1,3 @@
-//@import '_checkbox.scss';
-//@import '_datetimepicker.scss';
-//@import '_dropdown.scss';
-//@import '_inputfile.scss';
-//@import '_numeric.scss';
-//@import '_radiogroup.scss';
-//@import '_switch.scss';
-//@import '_textbox.scss';
-
 .tnt-input-label {
     cursor: text;
 
@@ -48,7 +39,7 @@
         position: relative;
         padding: 0;
         user-select: none;
-        height: 56px;
+        height: 36px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -97,6 +88,22 @@
                 }
             }
 
+            &:has(input:focus), &:has(input:placeholder-shown):not(:has(input[has-empty-placeholder])), &:not(:has(input:placeholder-shown)) {
+                .tnt-input-label-text {
+                    transform: translateY(-16px) scale(0.8) translateX(-11px);
+                }
+
+                &:has(input[formtype="outlined"]) {
+                    .tnt-input-label-text {
+                        transform: translateY(-28px) scale(0.8) translateX(-12px);
+                    }
+                }
+
+                input:has(+ .tnt-input-label-text) {
+                    transform: translateY(4px);
+                }
+            }
+
             &:has(input[formtype="filled"]) {
                 background-color: $tnt-color-surface-container-highest;
                 border-bottom: solid 1px $tnt-color-on-surface-variant;
@@ -140,6 +147,14 @@
                 border: solid 1px $tnt-color-outline;
                 @include tnt-border-radius(1);
 
+                &:has(input:user-invalid), &:has(input.invalid) {
+                    &:before, &:after {
+                        transform: rotateY(0);
+                        transform: rotateX(0);
+                        border-color: $tnt-color-error;
+                    }
+                }
+
                 &:after {
                     content: '';
                     position: absolute;
@@ -176,18 +191,15 @@
                     transform: rotateY(90deg);
                 }
 
+                .tnt-input-label-text {
+                    background-color: $tnt-color-surface;
+                    padding: 0 4px 0 4px;
+                }
+
                 &:has(input:focus):not(input:disabled) {
                     &:before, &:after {
                         transform: rotateY(0);
                         transform: rotateX(0);
-                    }
-                }
-
-                &:has(input:user-invalid), &:has(input.invalid) {
-                    &:before, &:after {
-                        transform: rotateY(0);
-                        transform: rotateX(0);
-                        border-color: $tnt-color-error;
                     }
                 }
             }
@@ -207,16 +219,6 @@
 
                 &:active, &:focus {
                     outline: none;
-                }
-            }
-
-            &:has(input:focus), &:has(input:placeholder-shown):not(:has(input[has-empty-placeholder])), &:not(:has(input:placeholder-shown)) {
-                .tnt-input-label-text {
-                    transform: translateY(-16px) scale(0.8) translateX(-11px);
-                }
-
-                input:has(+ .tnt-input-label-text) {
-                    transform: translateY(4px);
                 }
             }
         }
@@ -256,7 +258,7 @@
                 width: 6px;
                 height: 14px;
                 left: 7px;
-                top: 26px;
+                top: 16px;
                 border-right: solid 2px $tnt-color-surface;
                 border-bottom: solid 2px $tnt-color-surface;
                 transform: rotateX(90deg) rotateY(90deg) rotateZ(40deg);
@@ -351,7 +353,7 @@
                 width: 16px;
                 height: 16px;
                 left: 8px;
-                top: 28px;
+                top: 18px;
                 background-color: $tnt-color-outline;
                 z-index: 1;
                 transition: 250ms;
@@ -368,7 +370,7 @@
                 &:before {
                     width: 28px;
                     height: 28px;
-                    top: 22px;
+                    top: 12px;
                     left: 0px;
                     box-shadow: 0 0 0 8px #00000044;
                 }
@@ -380,7 +382,7 @@
                     width: 26px;
                     height: 26px;
                     left: 26px;
-                    top: 23px;
+                    top: 14px;
                 }
 
                 &:after {
@@ -393,7 +395,7 @@
                         width: 32px;
                         height: 32px;
                         left: 24px;
-                        top: 20px;
+                        top: 10px;
                     }
                 }
 
@@ -403,7 +405,7 @@
                         width: 26px;
                         height: 26px;
                         left: 26px;
-                        top: 23px;
+                        top: 14px;
                     }
 
                     &:after {
